--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Календарь веса</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Сто тысяч миллиардов стихотворений</title>
 </head>
 <body>
     <div id="content"></div>
